--- a/apps/web/src/features/home/home.html
+++ b/apps/web/src/features/home/home.html
@@ -65,7 +65,7 @@
               <div class="p-4">
                 <h3 class="text-lg font-medium text-gray-900">{{ product.name }}</h3>
                 <p class="text-sm text-gray-500">{{ product.brand }}</p>
-                <p class="mt-2 text-xl font-bold text-gray-900">\${{ product.price }}</p>
+                <p class="mt-2 text-xl font-bold text-gray-900">${{ product.price }}</p>
               </div>
             </div>
 
