--- a/apps/web/src/features/product-overview/product-overview.html
+++ b/apps/web/src/features/product-overview/product-overview.html
@@ -62,7 +62,7 @@
         <!-- Price & Add to Cart Section -->
         <div class="mt-4 lg:row-span-3 lg:mt-0">
           <h2 class="sr-only">Product information</h2>
-          <p class="text-3xl tracking-tight text-gray-900">\${{ product.price }}</p>
+          <p class="text-3xl tracking-tight text-gray-900">${{ product.price }}</p>
 
           <!-- Reviews -->
           <div class="mt-6">
