--- a/apps/web/src/features/product-overview/product-overview.html
+++ b/apps/web/src/features/product-overview/product-overview.html
@@ -147,7 +147,7 @@
                   <h3 class="text-lg font-medium text-gray-900">Specifications</h3>
                   <div class="mt-4">
                     <dl class="grid grid-cols-1 gap-x-4 gap-y-4 sm:grid-cols-2">
-                      @for (spec of getSpecsArray(); track spec) {
+                      @for (spec of getSpecsArray(); track spec.key) {
                         <div
                           class="border-t border-gray-200 pt-4"
                           >
