--- a/apps/web/src/features/checkout/checkout.html
+++ b/apps/web/src/features/checkout/checkout.html
@@ -158,7 +158,49 @@
               <p class="text-xs text-blue-600 mt-1">Use card: 4242424242424242</p>
               <p class="text-xs text-blue-600">Note: Payment may be declined randomly (mock payment system)</p>
             </div>
+
+            <div class="mb-4">
+              <label class="block text-sm font-medium text-gray-700 mb-2">Payment Method</label>
+
+              <div class="flex gap-4 text-sm">
+                <label class="flex items-center">
+                  <input type="radio"
+                        name="paymode"
+                        [checked]="paymentMode === 'saved'"
+                        (change)="useSavedCard()"
+                        class="mr-2 h-4 w-4 rounded border-gray-300 text-blue-600" />
+                  Use saved card
+                </label>
+
+                <label class="flex items-center">
+                  <input type="radio"
+                        name="paymode"
+                        [checked]="paymentMode === 'new'"
+                        (change)="useNewCard()"
+                        class="mr-2 h-4 w-4 rounded border-gray-300 text-blue-600" />
+                  Use a new card
+                </label>
+              </div>
+            </div>
             
+            @if (paymentMode === 'saved' && savedPaymentMethods.length > 0) {
+              <div class="mb-4">
+                <label class="block text-sm font-medium text-gray-700">Saved Cards</label>
+                <select [(ngModel)]="selectedPaymentId"
+                        (ngModelChange)="applySavedPayment($event)"
+                        class="mt-1 block w-full rounded-md border border-gray-300 px-3 py-2 focus:border-blue-500 focus:ring-1 focus:ring-blue-500">
+                  @for (pm of savedPaymentMethods; track pm._id) {
+                    <option [value]="pm._id">
+                      {{ pm.cardBrand }} •••• {{ pm.last4 }} @if (pm.isDefault) { (Default) }
+                    </option>
+                  }
+                </select>
+                <p class="mt-1 text-xs text-gray-500">
+                  Expiry + brand will autofill. You still enter CVC.
+                </p>
+              </div>
+            }
+
             <div class="space-y-4">
               <div>
                 <label class="block text-sm font-medium text-gray-700">Card Brand *</label>
@@ -170,15 +212,27 @@
                 </select>
               </div>
 
-              <div>
-                <label class="block text-sm font-medium text-gray-700">Card Number *</label>
-                <input type="text" 
-                      [(ngModel)]="billingInfo.cardNumber"
-                      maxlength="16"
-                      class="mt-1 block w-full rounded-md border border-gray-300 px-3 py-2 placeholder:text-gray-400 focus:border-blue-500 focus:ring-1 focus:ring-blue-500"
-                      placeholder="4242424242424242" />
-                <p class="mt-1 text-xs text-gray-500">Test card number provided above</p>
-              </div>
+          
+            <div class="mb-4">
+              <label class="block text-sm font-medium text-gray-700">Card Number</label>
+
+              @if (paymentMode === 'saved') {
+                <input
+                  type="text"
+                  [value]="'•••• •••• •••• ' + (savedCardLast4 || '----')"
+                  readonly
+                  class="mt-1 block w-full rounded-md border border-gray-300 px-3 py-2 bg-gray-50 text-gray-700"
+                />
+                <p class="mt-1 text-xs text-gray-500">Using saved card. Enter CVC to continue.</p>
+              } @else {
+                <input
+                  type="text"
+                  [(ngModel)]="billingInfo.cardNumber"
+                  placeholder="1234 5678 9012 3456"
+                  class="mt-1 block w-full rounded-md border border-gray-300 px-3 py-2"
+                />
+              }
+            </div>
 
 
               <div class="grid grid-cols-2 gap-4">
