--- a/apps/web/src/features/admin/admin.html
+++ b/apps/web/src/features/admin/admin.html
@@ -65,7 +65,14 @@
         <!-- Filters -->
         <div class="mb-6 bg-gray-50 p-4 rounded-lg border border-gray-200">
           <h3 class="text-sm font-medium text-gray-900 mb-3">Filter Orders</h3>
-          <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+          <div class="grid grid-cols-1 md:grid-cols-5 gap-4">
+            <input
+              type="text"
+              [(ngModel)]="orderFilters.userId"
+              (input)="applyOrderFilters()"
+              placeholder="Filter by user email"
+              class="rounded-md border border-gray-300 px-3 py-2 text-sm"
+            >
             <select [(ngModel)]="orderFilters.status" (change)="applyOrderFilters()"
                     class="rounded-md border border-gray-300 px-3 py-2 text-sm">
               <option value="">All Statuses</option>
