--- a/apps/web/src/features/landing-page/landing-page.html
+++ b/apps/web/src/features/landing-page/landing-page.html
@@ -14,4 +14,21 @@
        class="mt-6 text-gray-500 hover:text-black underline decoration-gray-400 underline-offset-4 cursor-pointer transition-colors">
         or continue to the website as a guest
     </a>
+
+    <div class="fixed bottom-4 left-4 right-4 md:left-auto md:right-4 md:w-96 bg-amber-50 border border-amber-300 rounded-lg p-4 shadow-lg">
+        <div class="flex items-start gap-3">
+            <span class="text-amber-500 text-xl">⚠️</span>
+            <div>
+                <p class="font-semibold text-amber-800 text-sm">Enable Third-Party Cookies</p>
+                <p class="text-amber-700 text-xs mt-1">
+                    This app uses cross-origin cookies for cart and login. 
+                    Please enable third-party cookies in your browser settings:
+                </p>
+                <ul class="text-xs text-amber-600 mt-2 space-y-1">
+                    <li><strong>Chrome:</strong> Settings → Privacy → Cookies → Allow all cookies</li>
+                    <li><strong>Firefox:</strong> Settings → Privacy → Custom → Uncheck "Cookies"</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
